traefik/traefik-deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: hme
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            # - --providers.kubernetescrd
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080

# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   namespace: hme
#   name: whoami
#   labels:
#     app: whoami

# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: whoami
#   template:
#     metadata:
#       labels:
#         app: whoami
#     spec:
#       containers:
#         - name: whoami
#           image: traefik/whoami
#           ports:
#             - name: web
#               containerPort: 80
