traefik/traefik-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.yawmzero.io`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService

    - match: Host(`traefik.yawmzero.io`) && (PathPrefix(`/metrics`) || PathPrefix(`/monitor`))
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: hme
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`rancher.yawmzero.io`)
    kind: Rule
    services:
    - name: rancher
      port: 80
